--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
 
     console "org.grails:grails-console"
+
+    compile "org.grails.plugins:segment:2.0.1"
 }
 
 task wrapper(type: Wrapper) {
